# docs

./: 404.html  Dockerfile  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: gh-pages.yml
100_/human/: index.html
100_/presentation/: index.html
docs/: index.md
docs/100_/: human.md  presentation.md
search/: search_index.json
site/: 404.html
site/100_/presentation/: index.html
