[project]
name = "docs"
version = "0.1.0"
description = "happy"
authors = [
    {name = "신민철",email = "homerjay@naver.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.6.11,<10.0.0)"
]


[tool.poetry]
package-mode = false 



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.33.1"

[tool.poe.tasks]
serve = "mkdocs serve"
